--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,11 @@ inventree-demo-dataset/
 inventree-data/
 dummy_image.*
 _tmp.csv
-inventree/label.pdf
-inventree/label.png
-inventree/my_special*
+InvenTree/label.pdf
+InvenTree/label.png
+label.pdf
+label.png
+InvenTree/my_special*
 _tests*.txt
 
 # Local static and media file storage (only when running in development mode)
