--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,3 +25,29 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: stable
           force: true
+
+  publish-build:
+    steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
+      - name: Environment Setup
+        uses: ./.github/actions/setup
+        with:
+          npm: true
+      - name: Install dependencies
+        run: cd src/frontend && yarn install
+      - name: Build frontend
+        run: cd src/frontend && npm run build
+      - name: Zip frontend
+        id: zip-frontend
+        run: |
+          filename="frontend-build-$(date +%s).zip"
+          echo "filename=$filename"
+          cd InvenTree/web/static
+          zip -r $filename web/
+      - uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: InvenTree/web/static/${{ steps.zip-frontend.outputs.filename }}
+          asset_name: frontend-build
+          tag: ${{ github.ref }}
+          overwrite: true
