--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -445,7 +445,7 @@ jobs:
         id: zip-frontend
         run: |
           filename="frontend-build-$(date +%s).zip"
-          echo "filename=$filename"
+          echo "filename=$filename" >> $GITHUB_OUTPUT
           cd InvenTree/web/static
           zip -r $filename web/
       - uses: actions/upload-artifact@v3
