--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,8 @@ jobs:
       - name: Zip frontend
         run: |
           cd InvenTree/web/static
-          zip -r frontend-build.zip web/
+          mv web frontend-build
+          zip -r frontend-build.zip frontend-build/
       - uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
