--- a/requirements.txt
+++ b/requirements.txt
@@ -239,6 +239,7 @@ pytz==2023.3
     #   icalendar
 pyyaml==6.0.1
     # via
+    #   -r requirements.in
     #   drf-spectacular
     #   tablib
 qrcode[pil]==7.4.2
