--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -88,8 +88,8 @@ jobs:
   pre-commit:
     name: Style [pre-commit]
     runs-on: ubuntu-20.04
-
-    needs: pep_style
+    needs: paths-filter
+    if: needs.paths-filter.outputs.server == 'true' || needs.paths-filter.outputs.frontend == 'true'
 
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
