move deps again

--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -187,7 +187,7 @@ jobs:
     name: Tests - DB [SQLite] + Coverage
     runs-on: ubuntu-20.04
 
-    needs: [ 'javascript', 'pre-commit' ]
+    needs: [ 'pep_style', 'pre-commit' ]
     continue-on-error: true # continue if a step fails so that coverage gets pushed
 
     env:
@@ -220,7 +220,7 @@ jobs:
   postgres:
     name: Tests - DB [PostgreSQL]
     runs-on: ubuntu-20.04
-    needs: [ 'javascript', 'pre-commit' ]
+    needs: [ 'pep_style', 'pre-commit' ]
 
     env:
       INVENTREE_DB_ENGINE: django.db.backends.postgresql
@@ -264,7 +264,7 @@ jobs:
     name: Tests - DB [MySQL]
     runs-on: ubuntu-20.04
 
-    needs: [ 'javascript', 'pre-commit' ]
+    needs: [ 'pep_style', 'pre-commit' ]
     if: github.event_name == 'push'
 
     env:
@@ -391,8 +391,8 @@ jobs:
         chmod +rw /home/runner/work/InvenTree/db.sqlite3
         invoke migrate
 
-  plattform_ui:
-    name: Tests - UI Platform
+  platform_ui:
+    name: Tests - Platform UI
     runs-on: ubuntu-20.04
     timeout-minutes: 60
     needs: ['pre-commit', 'paths-filter']
