--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -64,10 +64,10 @@ jobs:
         run: flake8 InvenTree --extend-ignore=D
 
   javascript:
-    name: Style - Classic UI [JS]
+    name: Style [JS]
     runs-on: ubuntu-20.04
 
-    needs: ['pep_style', 'pre-commit']
+    needs: pep_style
 
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
@@ -88,8 +88,8 @@ jobs:
   pre-commit:
     name: Style [pre-commit]
     runs-on: ubuntu-20.04
-    needs: paths-filter
-    if: needs.paths-filter.outputs.server == 'true' || needs.paths-filter.outputs.frontend == 'true'
+
+    needs: pep_style
 
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
@@ -187,7 +187,7 @@ jobs:
     name: Tests - DB [SQLite] + Coverage
     runs-on: ubuntu-20.04
 
-    needs: [ 'pep_style', 'pre-commit' ]
+    needs: [ 'javascript', 'pre-commit' ]
     continue-on-error: true # continue if a step fails so that coverage gets pushed
 
     env:
@@ -220,7 +220,7 @@ jobs:
   postgres:
     name: Tests - DB [PostgreSQL]
     runs-on: ubuntu-20.04
-    needs: [ 'pep_style', 'pre-commit' ]
+    needs: [ 'javascript', 'pre-commit' ]
 
     env:
       INVENTREE_DB_ENGINE: django.db.backends.postgresql
@@ -264,7 +264,7 @@ jobs:
     name: Tests - DB [MySQL]
     runs-on: ubuntu-20.04
 
-    needs: [ 'pep_style', 'pre-commit' ]
+    needs: [ 'javascript', 'pre-commit' ]
     if: github.event_name == 'push'
 
     env:
@@ -391,11 +391,11 @@ jobs:
         chmod +rw /home/runner/work/InvenTree/db.sqlite3
         invoke migrate
 
-  platform_ui:
-    name: Tests - Platform UI
+  plattform_ui:
+    name: Tests - UI Platform
     runs-on: ubuntu-20.04
     timeout-minutes: 60
-    needs: ['pre-commit', 'paths-filter']
+    needs: paths-filter
     if: needs.paths-filter.outputs.frontend == 'true'
     env:
       INVENTREE_DB_ENGINE: sqlite3
