--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,12 @@
 #
 asgiref==3.7.2
     # via django
+async-timeout==4.0.2
+    # via redis
 attrs==23.1.0
-    # via jsonschema
+    # via
+    #   jsonschema
+    #   referencing
 babel==2.12.1
     # via py-moneyed
 bleach[css]==6.0.0
@@ -22,13 +26,13 @@ cffi==1.15.1
     # via
     #   cryptography
     #   weasyprint
-charset-normalizer==3.1.0
+charset-normalizer==3.2.0
     # via requests
 coreapi==2.3.3
     # via -r requirements.in
 coreschema==0.0.4
     # via coreapi
-cryptography==41.0.1
+cryptography==41.0.2
     # via
     #   -r requirements.in
     #   djangorestframework-simplejwt
@@ -80,11 +84,11 @@ django-allauth==0.54.0
     # via
     #   -r requirements.in
     #   django-allauth-2fa
-django-allauth-2fa==0.11.0
+django-allauth-2fa==0.11.1
     # via -r requirements.in
 django-cleanup==8.0.0
     # via -r requirements.in
-django-cors-headers==4.1.0
+django-cors-headers==4.2.0
     # via -r requirements.in
 django-crispy-forms==1.14.0
     # via -r requirements.in
@@ -156,9 +160,9 @@ et-xmlfile==1.1.0
     # via openpyxl
 feedparser==6.0.10
     # via -r requirements.in
-fonttools[woff]==4.40.0
+fonttools[woff]==4.41.0
     # via weasyprint
-gunicorn==20.1.0
+gunicorn==21.1.0
     # via -r requirements.in
 html5lib==1.1
     # via weasyprint
@@ -166,16 +170,16 @@ icalendar==5.0.7
     # via django-ical
 idna==3.4
     # via requests
-importlib-metadata==6.7.0
-    # via markdown
 inflection==0.5.1
     # via drf-spectacular
 itypes==1.2.0
     # via coreapi
 jinja2==3.1.2
     # via coreschema
-jsonschema==4.17.3
+jsonschema==4.18.4
     # via drf-spectacular
+jsonschema-specifications==2023.7.1
+    # via jsonschema
 markdown==3.4.3
     # via django-markdownify
 markuppy==1.14
@@ -188,6 +192,8 @@ odfpy==1.4.1
     # via tablib
 openpyxl==3.1.2
     # via tablib
+packaging==23.1
+    # via gunicorn
 pdf2image==1.16.3
     # via -r requirements.in
 pillow==9.5.0
@@ -216,9 +222,7 @@ pyphen==0.14.0
     # via weasyprint
 pypng==0.20220715.0
     # via qrcode
-pyrsistent==0.19.3
-    # via jsonschema
-python-barcode[images]==0.14.0
+python-barcode[images]==0.15.1
     # via -r requirements.in
 python-dateutil==2.8.2
     # via
@@ -246,8 +250,12 @@ qrcode[pil]==7.4.2
     #   django-allauth-2fa
 rapidfuzz==0.7.6
     # via -r requirements.in
-redis==3.5.3
+redis==4.6.0
     # via django-redis
+referencing==0.30.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
 regex==2023.6.3
     # via -r requirements.in
 requests==2.31.0
@@ -257,7 +265,11 @@ requests==2.31.0
     #   requests-oauthlib
 requests-oauthlib==1.3.1
     # via django-allauth
-sentry-sdk==1.27.0
+rpds-py==0.9.2
+    # via
+    #   jsonschema
+    #   referencing
+sentry-sdk==1.28.1
     # via
     #   -r requirements.in
     #   django-q-sentry
@@ -266,7 +278,6 @@ sgmllib3k==1.0.0
 six==1.16.0
     # via
     #   bleach
-    #   blessed
     #   html5lib
     #   python-dateutil
 sqlparse==0.4.4
@@ -283,9 +294,7 @@ tinycss2==1.1.1
     #   cssselect2
     #   weasyprint
 typing-extensions==4.7.1
-    # via
-    #   asgiref
-    #   qrcode
+    # via qrcode
 uritemplate==4.1.1
     # via
     #   coreapi
@@ -295,8 +304,6 @@ urllib3==2.0.3
     #   dulwich
     #   requests
     #   sentry-sdk
-wcwidth==0.2.6
-    # via blessed
 weasyprint==54.3
     # via
     #   -r requirements.in
@@ -311,8 +318,6 @@ xlrd==2.0.1
     # via tablib
 xlwt==1.3.0
     # via tablib
-zipp==3.15.0
-    # via importlib-metadata
 zopfli==0.2.2
     # via fonttools
 
