--- a/requirements.txt
+++ b/requirements.txt
@@ -170,6 +170,8 @@ icalendar==5.0.7
     # via django-ical
 idna==3.4
     # via requests
+importlib-metadata==6.8.0
+    # via markdown
 inflection==0.5.1
     # via drf-spectacular
 itypes==1.2.0
@@ -294,7 +296,9 @@ tinycss2==1.1.1
     #   cssselect2
     #   weasyprint
 typing-extensions==4.7.1
-    # via qrcode
+    # via
+    #   asgiref
+    #   qrcode
 uritemplate==4.1.1
     # via
     #   coreapi
@@ -318,6 +322,8 @@ xlrd==2.0.1
     # via tablib
 xlwt==1.3.0
     # via tablib
+zipp==3.16.2
+    # via importlib-metadata
 zopfli==0.2.2
     # via fonttools
 
