Update translate task
- Allow for skipping of building static files
- CI workflow does not have node / etc / installed

--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -34,7 +34,7 @@ jobs:
           invoke install
       - name: Make Translations
         run: |
-          invoke translate
+          invoke translate --skip-static
       - name: Commit files
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
