--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,11 +16,11 @@ certifi==2023.5.7
     #   requests
 cfgv==3.3.1
     # via pre-commit
-charset-normalizer==3.1.0
+charset-normalizer==3.2.0
     # via
     #   -c requirements.txt
     #   requests
-click==8.1.3
+click==8.1.6
     # via pip-tools
 coverage==5.5
     # via
@@ -28,7 +28,7 @@ coverage==5.5
     #   coveralls
 coveralls==2.1.2
     # via -r requirements-dev.in
-distlib==0.3.6
+distlib==0.3.7
     # via virtualenv
 django==3.2.20
     # via
@@ -52,7 +52,7 @@ flake8==6.0.0
     #   pep8-naming
 flake8-docstrings==1.7.0
     # via -r requirements-dev.in
-identify==2.5.24
+identify==2.5.25
     # via pre-commit
 idna==3.4
     # via
@@ -65,12 +65,14 @@ mccabe==0.7.0
 nodeenv==1.8.0
     # via pre-commit
 packaging==23.1
-    # via build
+    # via
+    #   -c requirements.txt
+    #   build
 pep8-naming==0.13.3
     # via -r requirements-dev.in
-pip-tools==6.14.0
+pip-tools==7.1.0
     # via -r requirements-dev.in
-platformdirs==3.8.0
+platformdirs==3.9.1
     # via virtualenv
 pre-commit==3.3.3
     # via -r requirements-dev.in
@@ -101,21 +103,15 @@ sqlparse==0.4.4
     #   -c requirements.txt
     #   django
     #   django-debug-toolbar
-tomli==2.0.1
-    # via
-    #   build
-    #   pip-tools
-    #   pyproject-hooks
 typing-extensions==4.7.1
     # via
     #   -c requirements.txt
-    #   asgiref
     #   django-test-migrations
-urllib3==2.0.3
+urllib3==2.0.4
     # via
     #   -c requirements.txt
     #   requests
-virtualenv==20.23.1
+virtualenv==20.24.1
     # via pre-commit
 wheel==0.40.0
     # via pip-tools
