--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -103,9 +103,15 @@ sqlparse==0.4.4
     #   -c requirements.txt
     #   django
     #   django-debug-toolbar
+tomli==2.0.1
+    # via
+    #   build
+    #   pip-tools
+    #   pyproject-hooks
 typing-extensions==4.7.1
     # via
     #   -c requirements.txt
+    #   asgiref
     #   django-test-migrations
 urllib3==2.0.4
     # via
