--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,19 @@
 #
 asgiref==3.7.2
     # via django
+async-timeout==4.0.2
+    # via redis
 attrs==23.1.0
-    # via jsonschema
+    # via
+    #   jsonschema
+    #   referencing
 babel==2.12.1
     # via py-moneyed
 bleach[css]==6.0.0
     # via django-markdownify
 brotli==1.0.9
     # via fonttools
-certifi==2023.5.7
+certifi==2023.7.22
     # via
     #   requests
     #   sentry-sdk
@@ -22,13 +26,13 @@ cffi==1.15.1
     # via
     #   cryptography
     #   weasyprint
-charset-normalizer==3.1.0
+charset-normalizer==3.2.0
     # via requests
 coreapi==2.3.3
     # via -r requirements.in
 coreschema==0.0.4
     # via coreapi
-cryptography==41.0.1
+cryptography==41.0.2
     # via
     #   -r requirements.in
     #   djangorestframework-simplejwt
@@ -85,7 +89,7 @@ django-allauth-2fa==0.11.1
     # via -r requirements.in
 django-cleanup==8.0.0
     # via -r requirements.in
-django-cors-headers==4.1.0
+django-cors-headers==4.2.0
     # via -r requirements.in
 django-crispy-forms==1.14.0
     # via -r requirements.in
@@ -157,9 +161,9 @@ et-xmlfile==1.1.0
     # via openpyxl
 feedparser==6.0.10
     # via -r requirements.in
-fonttools[woff]==4.40.0
+fonttools[woff]==4.41.1
     # via weasyprint
-gunicorn==20.1.0
+gunicorn==21.2.0
     # via -r requirements.in
 html5lib==1.1
     # via weasyprint
@@ -175,8 +179,10 @@ itypes==1.2.0
     # via coreapi
 jinja2==3.1.2
     # via coreschema
-jsonschema==4.17.3
+jsonschema==4.18.4
     # via drf-spectacular
+jsonschema-specifications==2023.7.1
+    # via jsonschema
 markdown==3.4.3
     # via django-markdownify
 markuppy==1.14
@@ -189,6 +195,8 @@ odfpy==1.4.1
     # via tablib
 openpyxl==3.1.2
     # via tablib
+packaging==23.1
+    # via gunicorn
 pdf2image==1.16.3
     # via -r requirements.in
 pillow==9.5.0
@@ -209,7 +217,7 @@ pycparser==2.21
     # via cffi
 pydyf==0.7.0
     # via weasyprint
-pyjwt[crypto]==2.7.0
+pyjwt[crypto]==2.8.0
     # via
     #   django-allauth
     #   djangorestframework-simplejwt
@@ -217,9 +225,7 @@ pyphen==0.14.0
     # via weasyprint
 pypng==0.20220715.0
     # via qrcode
-pyrsistent==0.19.3
-    # via jsonschema
-python-barcode[images]==0.14.0
+python-barcode[images]==0.15.1
     # via -r requirements.in
 python-dateutil==2.8.2
     # via
@@ -248,8 +254,12 @@ qrcode[pil]==7.4.2
     #   django-allauth-2fa
 rapidfuzz==0.7.6
     # via -r requirements.in
-redis==3.5.3
+redis==4.6.0
     # via django-redis
+referencing==0.30.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
 regex==2023.6.3
     # via -r requirements.in
 requests==2.31.0
@@ -259,7 +269,11 @@ requests==2.31.0
     #   requests-oauthlib
 requests-oauthlib==1.3.1
     # via django-allauth
-sentry-sdk==1.27.0
+rpds-py==0.9.2
+    # via
+    #   jsonschema
+    #   referencing
+sentry-sdk==1.28.1
     # via
     #   -r requirements.in
     #   django-q-sentry
@@ -291,7 +305,7 @@ uritemplate==4.1.1
     # via
     #   coreapi
     #   drf-spectacular
-urllib3==2.0.3
+urllib3==2.0.4
     # via
     #   dulwich
     #   requests
