--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,6 +18,7 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@lingui/core": "^4.3.0",
         "@lingui/react": "^4.3.0",
+        "@mantine/carousel": "^6.0.17",
         "@mantine/core": "^6.0.17",
         "@mantine/dates": "^6.0.17",
         "@mantine/dropzone": "^6.0.17",
@@ -29,9 +30,12 @@
         "@tanstack/react-query": "^4.32.0",
         "axios": "^1.4.0",
         "dayjs": "^1.11.9",
+        "embla-carousel-react": "^8.0.0-rc11",
         "html5-qrcode": "^2.3.8",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-grid-layout": "^1.3.4",
         "react-router-dom": "^6.14.2",
         "zustand": "^4.3.9"
     },
@@ -42,9 +46,11 @@
         "@lingui/cli": "^4.3.0",
         "@lingui/macro": "^4.3.0",
         "@playwright/test": "^1.36.1",
+        "@types/lodash": "^4.14.195",
         "@types/node": "^20.4.4",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
+        "@types/react-grid-layout": "^1.3.2",
         "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^4.0.3",
         "babel-plugin-macros": "^3.1.0",
