--- a/InvenTree/config_template.yaml
+++ b/InvenTree/config_template.yaml
@@ -240,6 +240,15 @@ remote_login_header: HTTP_REMOTE_USER
 #   hide_admin_link: true
 #   hide_password_reset: true
 
+# Platform UI options
+# pui_settings:
+#   server_list:
+#     my_server1:
+#       host: https://demo.inventree.org/api/
+#       name: InvenTree Demo
+#   default_server: my_server1
+#   show_server_selector: false
+
 # Custom flags
 # InvenTree uses django-flags; read more in their docs at https://cfpb.github.io/django-flags/conditions/
 # Use environment variable INVENTREE_FLAGS or the settings below
