--- a/package.json
+++ b/package.json
@@ -1,12 +1,6 @@
 {
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@mantine/core": "^6.0.17",
-    "@mantine/dropzone": "^6.0.17",
-    "@mantine/hooks": "^6.0.17",
-    "@mantine/notifications": "^6.0.17",
     "eslint": "^8.41.0",
-    "eslint-config-google": "^0.14.0",
-    "mantine-datatable": "^2.9.0"
+    "eslint-config-google": "^0.14.0"
   }
 }
