--- a/src/frontend/netlify.toml
+++ b/src/frontend/netlify.toml
@@ -4,6 +4,7 @@
 [build]
   command = "yarn run build --outDir dist"
   publish = "dist"
+  base = "/platform"
 
 # Send requests to subpath
 [[redirects]]
