--- a/src/frontend/netlify.toml
+++ b/src/frontend/netlify.toml
@@ -2,7 +2,7 @@
 # https://www.netlify.com/docs/netlify-toml-reference/
 
 [build]
-  command = "yarn run build --outDir dist"
+  command = "yarn run extract && yarn run compile && yarn run build --outDir dist"
   publish = "dist"
 
 [build.environment]
